@@ -5,12 +5,14 @@ perl              = 5.010001
 namespace::autoclean = 0.19
 Class::Null       = 1.09
 Date::Format      = 2.24
+Exporter::Tiny    = 0.042
 File::DataClass   = v0.52.0
 IPC::ShareLite    = 0.17
 Moo               = 1.006000
 Time::Elapsed     = 0.31
 Try::Tiny         = 0.22
 Type::Tiny        = 1.000002
+Unexpected        = 0.34.0
 
 [Prereqs / Recommends]
 Cache::Memcached  = 1.24
